Fix search results box expands over the screen when have no white space texts

--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
@@ -750,6 +750,8 @@ button.navbar-toggle {
 #mkdocs-search-results>article>p {
     margin: 0 0 4px;
     font-size: 15px;
+    max-width: 600px;
+    word-wrap: break-word;
 }
 
 #mkdocs-search-results>p.error {
